--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             property="og:image"
             content="https://guilherme-ramon.github.io/portfolio/assets/imagens/foto-perfil.webp"
         />
+        <meta name="google-site-verification" content="4X5SSptMCW_MWuHHkpWlm1P7vhfc3Lj5cWuicZD0IRY" />
         <title>Guilherme Ramon - Portfólio de Desenvolvedor Front-End</title>
         <script type="application/ld+json">
             {
