--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
         <meta property="og:description" content="Veja meus projetos e habilidades como desenvolvedor front-end" />
         <meta property="og:url" content="https://guilhermeramon.vercel.app" />
         <meta property="og:type" content="website" />
-        
-        <!-- Aqui: usa favicon como imagem (quebra galho) -->
-        <meta property="og:image" content="https://guilhermeramon.vercel.app/favicon.ico" />
-        
-        <!-- E aqui: versão maior, recomendada para Google/LinkedIn/WhatsApp -->
-        <meta property="og:image" content="https://guilhermeramon.vercel.app/logo.png" />
+        <meta property="og:image" content="https://guilhermeramon.vercel.app/favicon-512.png" />
 
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -54,6 +49,8 @@
         <!-- Links principais -->
         <link rel="canonical" href="https://guilhermeramon.vercel.app" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <!-- Ícone maior -->
+        <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
     </head>
     <body>
         <div id="root"></div>
