--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
         <meta name="author" content="Guilherme Ramon" />
         <meta name="robots" content="index, follow" />
 
-        <!-- Open Graph -->
+        <!-- Open Graph (Facebook / LinkedIn / WhatsApp) -->
         <meta property="og:title" content="Portfólio de Guilherme Ramon - Desenvolvedor Front-End" />
         <meta property="og:description" content="Veja meus projetos e habilidades como desenvolvedor front-end" />
         <meta property="og:url" content="https://guilhermeramon.vercel.app" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://guilhermeramon.vercel.app/favicon-512.png" />
+        <meta property="og:image:alt" content="Logotipo de Guilherme Ramon, desenvolvedor front-end" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Portfólio de Guilherme Ramon - Desenvolvedor Front-End" />
+        <meta name="twitter:description" content="Veja meus projetos e habilidades como desenvolvedor front-end" />
+        <meta name="twitter:image" content="https://guilhermeramon.vercel.app/favicon-512.png" />
+        <meta name="twitter:image:alt" content="Logotipo de Guilherme Ramon, desenvolvedor front-end" />
 
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
